OO-3029: enhance "Shared with me" in e-Portfolio with pages list, save informations per reviewer / page...

--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
@@ -72,6 +72,7 @@ binder.num.sections.pages={0} Bereich(e) mit insgesamt {1} Eintr\u00E4gen
 binder.status=Status
 binder.title=Portfolio Mappe {0}
 binders=Mappe
+bookmark=Bookmark
 categories=Kategorien
 categories.add=Kategorien hinzuf\u00FCgen
 categories.hint=Geben Sie den gew\u00FCnschten Text ein und dr\u00FCcken Sie die Eingabetaste, um eine Kategorie ihrer Wahl zu erstellen.
@@ -92,6 +93,8 @@ comment.title=Kommentare
 comment.zero=Noch keine Kommentare
 compare.evaluations=Auswertung
 confirmation=Best\u00E4tigung
+confirm.close.page=Wollen Sie diesen Eintrag abschliessen?
+confirm.close.page.other.coaches=Die folgende Personnen haben auch Zugriff auf diesen Eintrag:
 create.binder=Mappe erstellen
 create.empty.binder=Leere Mappe erstellen
 create.empty.binder.from.course=Mappe f\u00FCr Portfolioaufgabe aus Kurs erstellen
@@ -162,6 +165,7 @@ export.page=Seite exportieren
 export.page.onepage=In eine Seite
 export.page.pdf=Seite als PDF exportieren
 fileupload=Titelbild
+filter.sections.empty=Kein offen Sektionen
 filter.show.all=Alle anzeigen
 firstName=Vorname
 go.to.trash=Papierkorb \u00F6ffnen
@@ -328,6 +332,9 @@ section.up=Oben
 select.form=Fragebogen ausw\u00E4hlen
 select.mymap=$org.olat.course.nodes.portfolio\:select.mymap
 series=Folge
+shared.binders=Mappen
+shared.bookmarks=Favoriten
+shared.entries=Einträge / To do
 shared.with.me=An mich freigegeben
 shared.with.me.text=Liste aller Mappen, die von anderen Benutzern an Sie freigegeben wurden.
 show.help.binder=Hilfe
@@ -342,12 +349,16 @@ status.inRevision=$\:status.in.revision
 status.not.started=nicht gestartet
 status.published=publiziert
 status.submitted=abgegeben
+status.user.incoming=Neu
+status.user.inProcess=In Bearbeitung
+status.user.done=Erledigt
 summary=Zusammenfassung
 summary.placeholder=Kurze Zusammenfassung \u00FCber den Inhalt
 table.grading.failed.points=<span class\="o_state o_failed"><i class\="o_icon o_icon_failed"> </i> {0} Punkt(e)</span>
 table.grading.no=noch kein Bewertung
 table.grading.passed.points=<span class\="o_state o_passed"><i class\="o_icon o_icon_passed"> </i> {0} Punkt(e), bestanden</span>
 table.grading.points={0} Punkt(e)
+table.header.mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favorit"> </i>
 table.header.categories=Kategorien
 table.header.change.status=Status
 table.header.closed=Abgeschlossen
@@ -361,6 +372,7 @@ table.header.grading=Bewertung
 table.header.inRevision=$\:status.in.revision
 table.header.key=ID
 table.header.lastUpdate=Letzte Aktualisierung
+table.header.new=Neu
 table.header.numpages=\# Eintr\u00E4ge
 table.header.open=Start
 table.header.open.sections=Offen
@@ -371,6 +383,8 @@ table.header.score=Punkte
 table.header.section=Bereich
 table.header.select.sections=Bereiche
 table.header.status=Status
+table.header.status.user=Status Benutzer
+table.header.status.viewer=Status
 table.header.title=Titel
 table.header.type=Typ
 table.header.up=<i class\='o_icon o_icon o_icon-lg o_icon_move_up'> </i>
