--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
@@ -72,6 +72,7 @@ binder.num.sections.pages={0} sections with a total of {1} entries
 binder.status=Status
 binder.title=Portfolio binder {0}
 binders=Binders
+bookmark=Bookmark
 categories=Categories
 categories.add=Add categories
 categories.hint=Enter the category text and press "Enter" to create the desired category.
@@ -162,6 +163,7 @@ export.page=Export page
 export.page.onepage=In a single page
 export.page.pdf=Export page as PDF
 fileupload=Teaser Image
+filter.sections.empty=No open sections
 filter.show.all=Show all
 firstName=First name
 go.to.trash=Go to trash
@@ -328,6 +330,9 @@ section.up=Up
 select.form=Select a survey
 select.mymap=$org.olat.course.nodes.portfolio\:select.mymap
 series=Series
+shared.binders=Binders
+shared.bookmarks=Favorits
+shared.entries=Entries / To do
 shared.with.me=Shared with me
 shared.with.me.text=A list of all items people shared with you.
 show.help.binder=Help
@@ -342,12 +347,16 @@ status.inRevision=$\:status.in.revision
 status.not.started=not started
 status.published=published
 status.submitted=submitted
+status.user.incoming=New
+status.user.inProcess=In process
+status.user.done=Done
 summary=Summary
 summary.placeholder=Short summary about the content
 table.grading.failed.points=<span class\="o_state o_failed"><i class\="o_icon o_icon_failed"> </i> {0} Point(s)</span>
 table.grading.no=no grading yet
 table.grading.passed.points=<span class\="o_state o_passed"><i class\="o_icon o_icon_passed"> </i> {0} Point(s), passed</span>
 table.grading.points={0} Point(s)
+table.header.mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Bookmark"> </i>
 table.header.categories=Categories
 table.header.change.status=Status
 table.header.closed=Closed
@@ -361,6 +370,7 @@ table.header.grading=Grading
 table.header.inRevision=$\:status.in.revision
 table.header.key=ID
 table.header.lastUpdate=Last update
+table.header.new=New
 table.header.numpages=\# Entries
 table.header.open=Start
 table.header.open.sections=Open
@@ -371,6 +381,8 @@ table.header.score=Points
 table.header.section=Section
 table.header.select.sections=Sections
 table.header.status=Status
+table.header.status.user=Status user
+table.header.status.viewer=Status
 table.header.title=Title
 table.header.type=Type
 table.header.up=<i class\='o_icon o_icon o_icon-lg o_icon_move_up'> </i>
