--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_fr.properties
@@ -366,6 +366,8 @@ table.header.score=Points
 table.header.section=Section
 table.header.select.sections=Sections
 table.header.status=Status
+table.header.status.user=Status util.
+table.header.status.viewer=Status
 table.header.title=Titre
 table.header.type=Type
 table.header.up=<i class\='o_icon o_icon o_icon-lg o_icon_move_up'> </i>
