--- a/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/docpool/ui/_i18n/LocalStrings_de.properties
@@ -34,3 +34,4 @@ teach.can.read.parent.levels.explain.1=Lesender Zugriff zus\u00E4tzlich auch auf
 teach.can.read.parent.levels.explain.2=\u00FCbergeordnete Ebene/n gestatten
 teach.can.write=Schreibender Zugriff gestatten
 teach.competence=Dozier-Kompetenz
+warning.taxonomy.index.emtpy=Die Dokumentpool-Infoseite wurde nicht richtig konfiguriert. Bitte fragen Sie den Systemadministrator, eine Infoseite in der Dokumentenpoolverwaltung hinzuzufügen.
