Style question status in table with questions, in status progress arrows and in the question edit view

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -157,7 +157,7 @@ process.confirm.endOfLife=Die Frage kann nach dem Setzen des "$\:lifecycle.statu
 process.final=Final
 process.final.set=Der Status der Frage wurde auf "$\:lifecycle.status.finalVersion" ge\u00E4ndert.
 process.endOfLife=End of life
-process.endOfLife.set=Das end of life wurde gesetzt.
+process.endOfLife.set=Der Status der Frage wurde auf "$\:lifecycle.status.endOfLife" ge\u00E4ndert..
 process.review=Beurteilung
 process.review.started=Der Beurteilungsprozess wurde gestartet.
 process.revision=Revision
@@ -170,7 +170,6 @@ process.start.review.button=$\:process.activate.start.review
 process.start.review.description=Nach dem Start des Beurteilungsprozesses werden alle Bewertungen der Frage gel\u00F6scht und die Frage kann nicht mehr bearbeitet werden. Wollen Sie den Beurteilungsprozess f\u00FCr die Frage "{0}" wriklich starten?
 process.start.review.taxonomy.level=$\:general.taxonomy.level
 process.start.review.title=$\:process.activate.start.review
-process.states=Status
 question=Itemanalyse
 question.assessmentType=Testart
 question.assessmentType.both=Both
