OO-3117: New field to edit the creator

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
@@ -95,7 +95,6 @@ lifecycle.status.revised=R\u00E9vis\u00E9
 lifecycle.status.unavailable=Indisponible
 lifecycle.version=Version
 list=Listes
-manage.owners=Auteurs
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favoris"> </i>
 menu.admin=Administration
 menu.admin.alt=Administration
@@ -150,8 +149,8 @@ remove=-
 rename.collection=Renommer la liste
 rights=Droits
 rights.copyright=Copyright
+rights.creator=Propri\u00E9taires
 rights.description=License
-rights.owners=Propri\u00E9taires
 root.taxonomyLevel=Sujets
 select.group=Partag\u00E9
 select.item=$\:details
