--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_it.properties
@@ -87,7 +87,6 @@ lifecycle.status.revised=Riveduto e corretto
 lifecycle.status.unavailable=Non disponibile
 lifecycle.version=Versione
 list=Liste
-manage.owners=Autori
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Preferiti"> </i>
 menu.admin=Amministrazione
 menu.admin.alt=Amministrazione
@@ -142,8 +141,8 @@ remove=-
 rename.collection=Rinominare la lista
 rights=Diritti
 rights.copyright=Copyright
+rights.creator=Proprietari
 rights.description=Licenza
-rights.owners=Proprietari
 root.taxonomyLevel=Discipline
 select.group=Condivisione
 select.item=$\:details
