--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
@@ -95,7 +95,6 @@ lifecycle.status.revised=Revisado
 lifecycle.status.unavailable=Indispon\u00EDvel
 lifecycle.version=Vers\u00E3o
 list=Listas
-manage.owners=Autores
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favorito"> </i>s
 menu.admin=Administra\u00E7\u00E3o
 menu.admin.alt=Administra\u00E7\u00E3o
@@ -150,8 +149,8 @@ remove=-
 rename.collection=Renomear lista
 rights=Direitos
 rights.copyright=Copyright
+rights.creator=Propriet\u00E1rios
 rights.description=Licen\u00E7a
-rights.owners=Propriet\u00E1rios
 root.taxonomyLevel=Assuntos
 select.group=Compartilhar
 select.item=$\:details
