--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_zh_CN.properties
@@ -79,7 +79,6 @@ lifecycle.status.revised=\u4FEE\u6539
 lifecycle.status.unavailable=\u4E0D\u53EF\u53CA
 lifecycle.version=\u7248\u672C
 list=\u5236\u5355
-manage.owners=\u4F5C\u8005
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favorit"> </i>
 menu.admin=\u7BA1\u7406
 menu.admin.alt=\u7BA1\u7406
@@ -130,8 +129,8 @@ remove=-
 rename.collection=\u8868\u5355\u91CD\u547D\u540D
 rights=\u6743\u9650
 rights.copyright=\u7248\u6743
+rights.creator=\u4F5C\u8005
 rights.description=\u8BB8\u53EF\u8BC1
-rights.owners=\u4F5C\u8005
 root.taxonomyLevel=\u4E13\u4E1A\u9886\u57DF
 select.group=\u91CA\u653E
 select.item=$\:details
