--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -102,7 +102,7 @@ lifecycle.status.revised=Revised
 lifecycle.status.unavailable=Unavailable
 lifecycle.version=Version
 list=Listen
-manage.owners=Autoren
+manage.owners=Bearbeiten
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favorit"> </i>
 menu.admin=Administration
 menu.admin.alt=Administration
@@ -190,8 +190,9 @@ remove=-
 rename.collection=Liste umbenennen
 rights=Rechte
 rights.copyright=Copyright
+rights.creator=Urheber
 rights.description=Lizenz
-rights.owners=Urheber
+rights.owners=Autoren
 root.taxonomyLevel=Fachbereiche
 select.group=Freigeben
 select.item=$\:details
