--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -102,7 +102,7 @@ lifecycle.status.revised=Revised
 lifecycle.status.unavailable=Unavailable
 lifecycle.version=Version
 list=Lists
-manage.owners=Authors
+manage.owners=Edit
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Bookmark"> </i>
 menu.admin=Administration
 menu.admin.alt=Administration
@@ -189,8 +189,9 @@ remove=-
 rename.collection=Rename list
 rights=Rights
 rights.copyright=Copyright
+rights.creator=Creator
 rights.description=License
-rights.owners=Owners
+rights.owners=Authors
 root.taxonomyLevel=Subjects
 select.group=Share
 select.item=$\:details
