OO-3118: add "Assessment mode" right in the groups rights management of courses

--- a/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_de.properties
@@ -1,6 +1,7 @@
 #Mon Mar 02 09:54:04 CET 2009
 bgr.archive=Datenarchivierung
 bgr.assess=Bewertungs-Werkzeug
+bgr.assessmode=Pr\u00FCfungsmodus
 bgr.editor=Kurseditor
 bgr.glossary=Glossar-Werkzeug
 bgr.groupmngt=Gruppen-Verwaltung
