--- a/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_en.properties
@@ -2,6 +2,7 @@
 add.all=Add all permissions
 bgr.archive=Archive tool
 bgr.assess=Assessment tool
+bgr.assessmode=Assessment mode
 bgr.dbs=Course database
 bgr.editor=Course editor
 bgr.glossary=Glossary tool
