--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -98,7 +98,7 @@ lifecycle.status.endOfLife=End of life
 lifecycle.status.finalVersion=Final
 lifecycle.status.last.modified=Letzte \u00C4nderung Status
 lifecycle.status.review=Review
-lifecycle.status.revised=Revised
+lifecycle.status.revised=Revision
 lifecycle.status.unavailable=Unavailable
 lifecycle.version=Version
 list=Listen
