--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -98,7 +98,7 @@ lifecycle.status.endOfLife=End of life
 lifecycle.status.finalVersion=Final
 lifecycle.status.last.modified=Status last modified
 lifecycle.status.review=Review
-lifecycle.status.revised=Revised
+lifecycle.status.revised=Revision
 lifecycle.status.unavailable=Unavailable
 lifecycle.version=Version
 list=Lists
@@ -156,7 +156,6 @@ process.confirm.endOfLife=If a question is end of life, the question can not be 
 process.draft.set=The status of the question has been changed to "$\:lifecycle.status.draft".
 process.final.set=The status of the question has been changed to "$\:lifecycle.status.finalVersion".
 process.endOfLife.set=The end of life has been set.
-process.revised.set=The status of the question has been changed to "$\:lifecycle.status.revised".
 process.review=Review
 process.review.set=The status of the question has been changed to "$\:lifecycle.status.review".
 process.review.started=The review process has been started.
