OO-3116: Option of the slectable subjects

--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -71,6 +71,9 @@ segment.review.process=Beurteilungsprozess
 segment.taxonomy=Fachbereiche
 selected.taxonomy.tree=Taxonomie
 shares.enabled=Gruppen
+taxonomy.all=Alle Fachbereiche
+taxonomy.competences=Fachbereiche mit der Kompetenz "Dozieren" oder "Verwalten"
+taxonomy.selectable=Ausw\u00E4lbare Fachbereiche
 taxonomyLevel.deleted=Fachbereich wurde erfolgreich gel\u00F6scht
 taxonomyLevel.notdeleted=Fachbereich konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet.
 type.key=ID
