--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -70,6 +70,9 @@ segment.pools=Pools
 segment.review.process=Review process
 segment.taxonomy=Subjects
 selected.taxonomy.tree=Taxonomy
+taxonomy.all=All subjects
+taxonomy.competences=Subjects with competence "teach" or "manage"
+taxonomy.selectable=Selectable subjects
 taxonomyLevel.deleted=Subject has been successfully deleted.
 taxonomyLevel.notdeleted=The subject cannot be deleted, it is probably in use.
 type.key=ID
