--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
@@ -136,7 +136,7 @@ form.match=Match
 form.metadata=Metadaten
 form.metadata.description=Beschreibung
 form.metadata.title=Titel
-form.pool=\u00DCbertrag
+form.pool=Fragenpool
 form.score=Punkte
 form.score.answer.correct=Korrekt
 form.score.answer.points=Punkte
@@ -239,7 +239,7 @@ warning.atleastone=Bitte w\u00E4hlen Sie mindestens ein Element.
 warning.atleastonesection=Diese Sektion kann nicht gel\u00F6scht werden. Ein Test oder ein Test-Part muss mindestens eine Sektion enthalten.
 warning.conversion.list=Es wurde Inkompatibilit\u00E4ten gefunde\:
 warning.conversion.standard=Es gibt ein Risiko dass sie Daten verlieren obwohl kein Inkompatibilit\u00E4t entdeckt wurde.
-warning.copy.from.pool=Die Frage wurde von Fragenpool kopiert. Sie k\u00F6nnen den Original Frage unter Master ID finden.
+warning.copy.from.pool=Die Frage wurde vom Fragenpool kopiert. Sie k\u00F6nnen die Originalfrage unter Master ID finden.
 warning.custom.operator=Es wurde ein Hersteller Spezifisch Extension gefunden. Diese ist nicht von Editor unterst\u00FCtzt.
 warning.feedback.cutvalue=Feedback wird aktiviert sobald bei "Notwendige Punktzahl f\u00FCr 'Bestanden'" eine Punktzahl eingegeben wurde.
 warning.in.use=Die Ressource wird bereits f\u00FCr Auswertung verwendet. Die Bearbeitung ist begrenzt.
