--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
@@ -135,7 +135,7 @@ form.match=Match
 form.metadata=Metadata
 form.metadata.description=Description
 form.metadata.title=Title
-form.pool=Transfer
+form.pool=Question bank
 form.score=Score
 form.score.answer.correct=Correct
 form.score.answer.points=Points
@@ -238,7 +238,7 @@ warning.alien.assessment.test=This test cannot be processed with the OpenOLAT ed
 warning.alien.feedbacks=This question contains feedbacks which are not compatible with this editor. They will be lost after conversion.
 warning.atleastone=Please, choose at least one element.
 warning.atleastonesection=The section cannot be deleted. A test or a test part must contain at least one section.
-warning.copy.from.pool=The question was copied from the question bank. You can found the original question under the master id.
+warning.copy.from.pool=The question was copied from the question bank. You can find the original question under the master id.
 warning.conversion.list=Some incompatibilities was found\:
 warning.conversion.standard=There is a risk that some data got lost after conversion but no flagrant incompatibilities was found.
 warning.custom.operator=This question contains creator specific extension which are currently not supported by OpenOLAT.
