3116: Option to allow/forbid the creation of new subjects while importing a question

--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -38,6 +38,7 @@ item.license.notdeleted=Lizenz konnte nicht gel\u00F6scht werden, eventuell wird
 error.item.type.unique=Ein Fragetyp mit diesem Name existiert schon.
 item.type.deleted=Fragetyp wurde erfolgreich gel\u00F6scht
 item.type.notdeleted=Fragetyp konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet
+import.create.subject=Fachbereich beim Import erzeugen
 level.key=ID
 level.level=Stufe
 level.translation=\u00DCbersetzung
