OO-3029: wording and fixes

--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
@@ -94,7 +94,7 @@ comment.zero=Noch keine Kommentare
 compare.evaluations=Auswertung
 confirmation=Best\u00E4tigung
 confirm.close.page=Wollen Sie diesen Eintrag abschliessen?
-confirm.close.page.other.coaches=Die folgende Personnen haben auch Zugriff auf diesen Eintrag:
+confirm.close.page.other.coaches=Der Eintrag wird f\u00FCr den Lernenden anschliessend als abgeschlossen angezeigt.
 create.binder=Mappe erstellen
 create.empty.binder=Leere Mappe erstellen
 create.empty.binder.from.course=Mappe f\u00FCr Portfolioaufgabe aus Kurs erstellen
@@ -165,7 +165,7 @@ export.page=Seite exportieren
 export.page.onepage=In eine Seite
 export.page.pdf=Seite als PDF exportieren
 fileupload=Titelbild
-filter.sections.empty=Kein offen Sektionen
+filter.sections.empty=Keine offenen Sektionen
 filter.show.all=Alle anzeigen
 firstName=Vorname
 go.to.trash=Papierkorb \u00F6ffnen
@@ -194,7 +194,7 @@ issue=Ausgabe
 language=Language
 lastName=Name
 leave=Entfernen
-leave.explain=Wollen Sie wirklich diese Sammelmappe von ihre Liste entfernen? Der Author muss wieder ihene den Zugriff geben um diese Mappe wieder zu sehen.
+leave.explain=Wollen Sie diese Mappe wirklich entfernen? Sie haben anschliessend keinen Zugriff mehr. Damit Sie die Mappe wieder sehen k\u00F6nnen, muss Ihnen der Besitzer der Mappe erneut eine Freigabe erteilen.
 mail=Mail
 mail.body=Nachricht
 mail.subject=Betreffzeile
@@ -344,7 +344,7 @@ status.closed=abgeschlossen
 status.deleted=gel\u00F6scht
 status.draft=Entwurf
 status.in.progress=in Bearbeitung
-status.in.revision=In revision
+status.in.revision=In \u00DCberarbeitung
 status.inRevision=$\:status.in.revision
 status.not.started=nicht gestartet
 status.published=publiziert
