--- a/src/main/java/org/olat/admin/security/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/admin/security/_i18n/LocalStrings_en.properties
@@ -4,9 +4,10 @@ admin.menu.title.alt=Change security settings
 sec.title=Security settings
 sec.description=Choose the security level depending on the requirements of your institution. To achieve the highest security level, all of the security features listed below have to be activated.
 sec.force.download=Force file download in folders
-sec.topframe=Prevent embedding in frames
+sec.topframe=Prevent embedding in frames using JavaScript code
 sec.wiki=Block wiki resources
 sec.top.frame.explanation=Due to compatibility reasons, the rich text component (TinyMCE) of OpenOLAT cannot be embedded in a frame.
+sec.xframe.sameorigin=Prevent embedding in frames by sending HTTP header X-FRAME-OPTIONS=SAMEDOMAIN
 
 
 
