--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -116,8 +116,8 @@ menu.admin.studyfields=Fachbereich
 menu.admin.studyfields.alt=Fachbereich
 menu.admin.types=Fragetyp
 menu.admin.types.alt=Fragetyp
-menu.database=Fragendatenbank
-menu.database.alt=Ihre Fragendatenbank
+menu.database=Mein Fragenpool
+menu.database.alt=Mein Fragenpool
 menu.database.favorit=Meine Favoriten
 menu.database.favorit.alt=Meine Favoriten
 menu.database.my=Meine Fragen
@@ -200,6 +200,10 @@ select.pool=In Pool freigeben
 share.editable=Editieren
 share.group=In Gruppe freigeben
 share.item=Freigeben
+share.item.group=Freigeben in Gruppe "{0}"
+share.item.groups=Freigeben in Gruppen
+share.item.pool=Freigeben in Pool "{0}"
+share.item.pools=Freigeben in Pools
 share.options=Wollen Sie anderen Personen erlauben diese Frage(n) zu bearbeiten?
 share.pool=In Pool freigeben
 shared=Freigegeben
