--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -116,8 +116,8 @@ menu.admin.studyfields=Subject
 menu.admin.studyfields.alt=Subject
 menu.admin.types=Type
 menu.admin.types.alt=Type
-menu.database=Question database
-menu.database.alt=Your question database
+menu.database=My question bank
+menu.database.alt=My question bank
 menu.database.favorit=My favourites
 menu.database.favorit.alt=My favourites
 menu.database.my=My questions
@@ -198,6 +198,10 @@ select.pool=Share with pool
 share.editable=Edit
 share.group=Share with group
 share.item=Share
+share.item.group=Share with group "{0}"
+share.item.groups=Share with groups
+share.item.pool=Share with pool "{0}"
+share.item.pools=Share with pools
 share.options=Do you want to allow other users to edit the imported question(s)? 
 share.pool=Share with pool
 shared=Shared
