OO-3029: better sort of draft, exclude "done" in the list...

--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
@@ -93,8 +93,8 @@ comment.title=Kommentare
 comment.zero=Noch keine Kommentare
 compare.evaluations=Auswertung
 confirmation=Best\u00E4tigung
-confirm.close.page=Wollen Sie diesen Eintrag abschliessen?
-confirm.close.page.other.coaches=Der Eintrag wird f\u00FCr den Lernenden anschliessend als abgeschlossen angezeigt.
+confirm.close.page=Wollen Sie diesen Eintrag abschliessen? Der Eintrag wird f\u00FCr den Lernenden anschliessend als abgeschlossen angezeigt.
+confirm.close.page.other.coaches=Die folgende Personen haben auch Zugriff auf diesen Eintrag:
 create.binder=Mappe erstellen
 create.empty.binder=Leere Mappe erstellen
 create.empty.binder.from.course=Mappe f\u00FCr Portfolioaufgabe aus Kurs erstellen
