OO-3174: CSV import of essay and match in QTI 2.1

--- a/src/main/java/org/olat/ims/qti21/questionimport/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/questionimport/_i18n/LocalStrings_de.properties
@@ -14,4 +14,7 @@ item.type.fib=$org.olat.ims.qti.editor\:item.type.fib
 item.type.kprim=$org.olat.ims.qti.editor\:item.type.kprim
 item.type.mc=$org.olat.ims.qti.editor\:item.type.mc
 item.type.sc=$org.olat.ims.qti.editor\:item.type.sc
+item.type.essay=$org.olat.ims.qti21.ui.editor\:new.essay
+item.type.match=$org.olat.ims.qti21.ui.editor\:new.match
+item.type.matchdraganddrop=$org.olat.ims.qti21.ui.editor\:new.matchdraganddrop
 error.at.line=Problem auf Zeile {0}
