no-jira: feedback

--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
@@ -2,7 +2,7 @@
 MULTIPLE=Multiple choice
 SINGLE=Single choice
 add=Hinzuf\u00FCgen
-add.additional.feedback=Bedingte Feedback hinzuf\u00FCgen
+add.additional.feedback=Bedingtes Feedback hinzuf\u00FCgen
 add.answered.feedback=Feedback bei Antwort hinzuf\u00FCgen
 add.correct.feedback=Feedback bei Wahl aller korrekten Antworten hinzuf\u00FCgen
 add.correctSolution.feedback=Korrekte L\u00F6sung hinzuf\u00FCgen
