OO-3217: add archive excel for check list, add assessment documents to archives of course elements

--- a/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_de.properties
@@ -92,6 +92,7 @@ nodechoose.intro.projectbroker=W\u00E4hlen Sie einen Kursbaustein aus, um dessen
 nodechoose.intro.scorm=W\u00E4hlen Sie im folgenden Dialog den SCORM Baustein aus, der ausgewertet werden soll
 nodechoose.intro.ta=W\u00E4hlen Sie einen Kursbaustein aus, um dessen Aufgaben/L\u00F6sungen zu archivieren.
 nodechoose.intro.wiki=W\u00E4hlen Sie einen Kursbaustein aus, um dessen Wikis zu archivieren.
+nodechoose.intro.checklist=W\u00E4hlen Sie einen Kursbaustein aus, um dessen Checkliste zu archivieren.
 overview.nonodes.checklist=Dieser Kurs enth\u00E4lt keine Checkliste.
 overview.nonodes.iqtest=Dieser Kurs enth\u00E4lt keine Tests.
 overview.nonodes.iqsurv=Dieser Kurs enth\u00E4lt keine Umfragen.
