--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_en.properties
@@ -15,6 +15,10 @@ checklist.update.assessment=Updating the assessment information of all course pa
 checklist.update.efficiencystatements=Updating of certificates of all users.
 coach.desc=In the list below you will find all participants of this course coached by you. Select "$\:table.header.edit.checkbox" in order to change check marks or the score of a participant.
 coach.due.date.desc=Please notice that this checklist has a deadline. As a coach, you should make changes only after the deadline expiration.
+column.header.homepage=Home page
+column.header.node.passed=Passed course element
+column.header.node.points=Score course element
+column.header.points=$\:box.points
 comment.nocomment=$org.olat.course.nodes.ms\:comment.nocomment
 comment.title=$org.olat.course.nodes.ms\:comment.title
 condition.accessibility.title=Access
