--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_fr.properties
@@ -15,6 +15,10 @@ checklist.update.assessment=Mettre \u00E0 jour les \u00E9valuations de tous les 
 checklist.update.efficiencystatements=Mettre \u00E0 jour les certificats de tous les utilisateurs.
 coach.desc=Dans la liste ci-dessous vous trouverez tous les participants du cours que vous supervisez. S\u00E9lectionnez "$\:table.header.edit.checkbox" pour changer les cases \u00E0 cocher ou le score d'un participant.
 coach.due.date.desc=S'il vous pla\u00EEt noter que cette liste de contr\u00F4le fixe un d\u00E9lai. En tant que coach, vous ne devez effectuer des changements qu'apr\u00E8s la date limite d'expiration.
+column.header.homepage=Page d'accueil
+column.header.node.passed=Element de cours r\u00E9ussi
+column.header.node.points=Points \u00E9l\u00E9ment de cours
+column.header.points=$\:box.points
 comment.nocomment=$org.olat.course.nodes.ms\:comment.nocomment
 comment.title=$org.olat.course.nodes.ms\:comment.title
 condition.accessibility.title=Acc\u00E8s
