--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_it.properties
@@ -14,6 +14,8 @@ checklist.update.assessment=Aggiornare la valutazione per tutti i partecipanti a
 checklist.update.efficiencystatements=Aggiornare i certificati di tutti gli utenti.
 coach.desc=Nell'elenco sottostante troverai tutti i partecipanti al corso tutorati da te. Selezionare "$\:table.header.edit.checkbox" per modificare le checkbox o il punteggio di un partecipante.
 coach.due.date.desc=Prego notare che questa checklist ha una scadenza. Come tutore, dovresti effettuare modifiche solo dopo la scadenza.
+column.header.score=$\:box.points
+column.header.homepage=Home page
 comment.nocomment=$org.olat.course.nodes.ms\:comment.nocomment
 comment.title=$org.olat.course.nodes.ms\:comment.title
 condition.accessibility.title=Accesso
