--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_pt_BR.properties
@@ -15,6 +15,10 @@ checklist.update.assessment=Atualizando as informa\u00E7\u00F5es de avalia\u00E7
 checklist.update.efficiencystatements=Atualizando os certificados de todos os usu\u00E1rios.
 coach.desc=Na lista abaixo voc\u00EA vai encontrar todos os participantes deste curso treinados por voc\u00EA. Selecione "$\:table.header.edit.checkbox", a fim de alterar as marcas de sele\u00E7\u00E3o ou a pontua\u00E7\u00E3o de um participante.
 coach.due.date.desc=Por favor note que este Checklist tem um prazo. Como treinador, voc\u00EA deve fazer altera\u00E7\u00F5es somente ap\u00F3s a expira\u00E7\u00E3o do prazo.
+column.header.homepage=Home page
+column.header.node.passed=Elemento de curso aprovado
+column.header.node.points=Pontua\u00E7\u00E3o do elemento do curso
+column.header.points=$\:box.points
 comment.nocomment=$org.olat.course.nodes.ms\:comment.nocomment
 comment.title=$org.olat.course.nodes.ms\:comment.title
 condition.accessibility.title=Acesso
