--- a/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_de.properties
@@ -26,3 +26,4 @@ table.user.score=Punkte
 table.user.trial=Versuch
 table.test.sessions=Test Versuche
 export.folder.name=Resultate
+assessment.docs=Bewertungsdokumente
