--- a/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_en.properties
@@ -26,3 +26,4 @@ table.user.id=ID
 table.user.manualScore=Manual score
 table.user.score=Score
 table.user.trial=Attempt
+assessment.docs=Assessment documents
