--- a/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_fr.properties
@@ -26,3 +26,4 @@ table.user.id=ID
 table.user.manualScore=Points manuels
 table.user.score=Points
 table.user.trial=Essai
+assessment.docs=Documents d'\u00E9valuation
