--- a/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/ims/qti21/resultexport/_i18n/LocalStrings_pt_BR.properties
@@ -26,3 +26,4 @@ table.user.id=ID
 table.user.manualScore=Pontua\u00E7\u00E3o manual
 table.user.score=Pontua\u00E7\u00E3o
 table.user.trial=Tentativa
+assessment.docs=Documentos de avalia\u00E7\u00E3o
