--- a/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_en.properties
@@ -92,6 +92,7 @@ nodechoose.intro.projectbroker=Please select a course element to archive its top
 nodechoose.intro.scorm=In the following dialog please select the SCORM element to be assessed.
 nodechoose.intro.ta=Select a course element in order to archive its tasks/solutions.
 nodechoose.intro.wiki=Select a course element to archive its Wiki.
+nodechoose.intro.checklist=Select a course element to archive its checklists.
 overview.nonodes.iqtest=This course does not contain any tests.
 overview.nonodes.iqsurv=This course does not contain any surveys.
 overview.nonodes.checklist=This course does not contain any checklists.
