--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_de.properties
@@ -15,6 +15,11 @@ checklist.update.assessment=Aktualisierung der Bewertungsinformationen aller Ben
 checklist.update.efficiencystatements=Aktualisierung der Leistungsnachweise aller Benutzer
 coach.desc=In der unten stehenden Listen finden Sie die von Ihnen betreuten Teilnehmer dieses Kurses. W\u00E4hlen Sie "$\:table.header.edit.checkbox" um die Checkbox-Auswahl oder Punkte eines Teilnehmers zu ver\u00E4ndern.
 coach.due.date.desc=Diese Checkliste ist mit einem Abgabedatum versehen. Als Betreuer sollten Sie \u00C4nderungen erst nach Ablauf des Abgabedatums vornehmen.
+column.header.seqnum=Laufnummer
+column.header.homepage=Homepage
+column.header.node.passed=Kursbaustein bestanden
+column.header.node.points=Kursbaustein Punkte
+column.header.points=$\:box.points
 comment.nocomment=$org.olat.course.nodes.ms\:comment.nocomment
 comment.title=$org.olat.course.nodes.ms\:comment.title
 condition.accessibility.title=Zugang
