OO-3116: Separate button for creating a test

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -32,6 +32,9 @@ create.list=Liste erstellen
 create.pool=Pool erstellen
 create.success=1 Frage wurde erfolgreich erstellt.
 create.test=Test erstellen
+create.test.format.qti12=QTI 1.2
+create.test.format.qti21=QTI 2.1
+create.test.no.formats=Die ausgew\u00E4hlten Fragen sind in einem Format, mit welchem kein Test erstellt werden kann.
 delete.collection=Liste l\u00F6schen
 delete.item=L\u00F6schen
 delete.pool=Pool l\u00F6schen
@@ -49,6 +52,7 @@ error.input.toolong=Leider ist Ihr gerade eingegebener Text mit {1} Zeichen zu l
 error.select.one=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen.
 error.wrongFloat=Falsches Zahlenformat. Beispiele\: 1.0, 0.5,§ 0.2
 export.item=Export
+export.overview.accept=Ber\u00FCcksichtigt
 general=Allgemein
 general.additional.informations=Zusatzinformationen
 general.additional.informations.long=$\:general.additional.informations
