--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -32,6 +32,9 @@ create.list=Create list
 create.pool=Create pool
 create.success=1 question has been created.
 create.test=Create test
+create.test.format.qti12=QTI 1.2
+create.test.format.qti21=QTI 2.1
+create.test.no.formats=The selected questions have the wrong format to create a test.
 delete.collection=Delete list
 delete.item=Delete
 delete.pool=Delete pool
@@ -49,6 +52,7 @@ error.input.toolong=The text you entered is to long ({1} characters). Only {1} c
 error.select.one=You need to select at least one question.
 error.wrongFloat=Wrong number format. Example\: 1.0, 0.5, 0.2
 export.item=Export
+export.overview.accept=Used
 general=General
 general.additional.informations=Add. information
 general.additional.informations.long=Additional information
