--- a/src/main/java/org/olat/modules/qpool/ui/wizard/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/wizard/_i18n/LocalStrings_de.properties
@@ -6,10 +6,8 @@ export.outcome.download.Docx=Word Datei f\u00FCr offline Pr\u00FCfung (inkl. Kor
 export.outcome.download.IMS_QTI_1.2=QTI 1.2 Testdatei f\u00FCr Austausch mit anderen kompatiblen LMS
 export.outcome.download.IMS_QTI_2.1=QTI 2.1 Testdatei f\u00FCr Austausch mit anderen kompatiblen LMS
 export.outcome.download.Zip=ZIP Datei f\u00FCr Austausch mit anderen OpenOLAT Systemen oder Archivierung
-export.outcome.repository.IMS_QTI_1.2=QTI 1.2 Test in Autorenbereich
-export.outcome.repository.IMS_QTI_2.1=QTI 2.1 Test in Autorenbereich
 export.overview=\u00DCberpr\u00FCfen
 export.type=Typ
-export.type.desc=Frageitems k\u00F6nnen in verschiedenen Formaten exportiert werden. W\u00E4hlen Sie das gew\u00FCnschte Format aus der folgenden Liste. Wenn Sie die Items in einem OpenOLAT Test verwenden wollen, so w\u00E4hlen Sie "$\:export.outcome.repository.IMS_QTI_1.2".
+export.type.desc=Fragen k\u00F6nnen in verschiedenen Formaten exportiert werden. W\u00E4hlen Sie das gew\u00FCnschte Format aus der folgenden Liste.
 exportable=Export m\u00F6glich
 table.user.login=$org.olat.admin.user\:table.user.login
