OO-3216: add separate active/closed filter in the author environment and in the extended search in "My courses"

--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_en.properties
@@ -139,6 +139,10 @@ cif.owners=Authoring rights
 cif.private.dates=Dates
 cif.public.dates=Semester
 cif.requirements=Requirements
+cif.resources.status=Courses
+cif.resources.status.all=All
+cif.resources.status.active=Active
+cif.resources.status.closed=Closed
 cif.resourcename=File name
 cif.softkey=OpenOLAT soft ID
 cif.type=Type
