--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_de.properties
@@ -143,6 +143,10 @@ cif.owners=Autoren
 cif.private.dates=Datum
 cif.public.dates=Semester
 cif.requirements=Voraussetzungen
+cif.resources.status=Kurse
+cif.resources.status.all=Alle
+cif.resources.status.active=Aktive
+cif.resources.status.closed=Beendete
 cif.resourcename=Dateiname
 cif.softkey=OpenOLAT-Soft-ID
 cif.type=Typ
