OO-3257: unify the label for authors

--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_de.properties
@@ -524,7 +524,7 @@ table.header.access.owner=<span class\="o_ochre">B---</span>
 table.header.access.user=<span class\="o_blue">BAR-</span>
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.author=Erstellt durch
-table.header.authors=Besitzer
+table.header.authors=$\:cif.authors
 table.header.date=Erstellt
 table.header.deletedby=Gel\u00F6scht von
 table.header.deletiondate=Gel\u00F6scht am
