--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_en.properties
@@ -521,7 +521,7 @@ table.header.access.owner=<span class\="o_ochre">O---</span>
 table.header.access.user=<span class\="o_blue">OAU-</span>
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.author=Creator
-table.header.authors=Authors
+table.header.authors=$\:cif.authors
 table.header.date=Created
 table.header.deletedby=Delete by
 table.header.deletiondate=Deletion date
