--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_it.properties
@@ -498,7 +498,7 @@ table.header.access.owner=<span class\="o_ochre">P---</span>
 table.header.access.user=<span class\="o_blue">PAR-</span>
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.author=Creatore
-table.header.authors=Autori
+table.header.authors=$\:cif.authors
 table.header.date=Creato
 table.header.deletedby=Eliminato da
 table.header.deletiondate=Data di eliminazione
