--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_pt_BR.properties
@@ -517,7 +517,7 @@ table.header.access.owner=<span class\="o_ochre">P---</span>
 table.header.access.user=<span class\="o_blue">PAR-</span>
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.author=Autor
-table.header.authors=Autores
+table.header.authors=$\:cif.authors
 table.header.date=Criado
 table.header.deletedby=Exclu\u00EDdo por
 table.header.deletiondate=Data de exclus\u00E3o
