--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -66,6 +66,7 @@ cif.access.owners_authors=\u6240\u6709\u8005\u548C\u5176\u5B83OpenOLAT\u521B\u5E
 cif.access.users=\u6240\u6709OpenOLAT\u7528\u6237
 cif.access.users_guests=\u6CE8\u518COpenOLAT\u7528\u6237\u548C\u8BBF\u5BA2
 cif.author=\u521B\u5EFA\u8005
+cif.authors=\u4F5C\u8005
 cif.canCopy=\u53EF\u4EE5\u590D\u5236
 cif.canDownload=\u53EF\u4EE5\u4E0B\u8F7D
 cif.canDownload.na=<i>\u65E0\u6CD5\u4E0B\u8F7D</i>
@@ -325,7 +326,7 @@ table.header.access.owner=<span class\="o_ochre">B---</span>
 table.header.access.user=<span class\="o_blue">BAR-</span>
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.author=\u521B\u5EFA\u8005
-table.header.authors=\u4F5C\u8005
+table.header.authors=$\:cif.authors
 table.header.date=\u5DF2\u521B\u5EFA\u7684
 table.header.description=\u63CF\u8FF0
 table.header.details=<i class\='o_icon o_icon_details o_icon-lg'> </i>
