--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_fr.properties
@@ -517,7 +517,7 @@ table.header.access.owner=<span class\="o_ochre">P---</span>
 table.header.access.user=<span class\="o_blue">PAU-</span>
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.author=Cr\u00E9ateur
-table.header.authors=Auteurs
+table.header.authors=$\:cif.authors
 table.header.date=Cr\u00E9\u00E9e
 table.header.deletedby=Effac\u00E9 par
 table.header.deletiondate=Date de suppression
