OO-3118: better differentiate course and group, fix an issue with translation of the checkbox labels

--- a/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_en.properties
@@ -17,6 +17,8 @@ table.header.groups=Groups
 table.header.remove=Remove
 table.header.role=Role
 tutor=Coach
+repo.tutor=Course coach
+repo.participant=Course participant
 
 
 
