--- a/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_de.properties
@@ -17,6 +17,8 @@ remove.all=Alle Rechte Entfernen
 add.all=Alle Rechte hinzuf\u00fcgen
 tutor=Betreuer
 participant=Teilnehmer
+repo.tutor=Kursbetreuer
+repo.participant=Kursteilnehmer
 
 
 
